[package]
name = "smolrpg"
version = "0.0.1"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true 
codegen-units = 1    # should be 1, test diff
opt-level = "z"       # is this highest  
panic = 'abort'

[dependencies]
hecs = "0.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
[dependencies.winapi]
version = "0.3.8"
features = [
	"winuser",
	"libloaderapi",
	"heapapi",
	"errhandlingapi",
]
